[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/actors/objects/goomba/goomba.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/goomba/frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/actors/objects/bullet_bill/sound.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/objects/goomba/poof.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/objects/goomba/poof.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/actors/objects/goomba/stomp.wav" type="AudioStream" id=6]

[sub_resource type="RayShape2D" id=1]
length = 10.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 2 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 208.896, 69.015 )

[sub_resource type="CanvasItemMaterial" id=6]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[node name="Goomba" type="Node2D"]
z_index = -2
script = ExtResource( 1 )

[node name="Goomba" type="KinematicBody2D" parent="."]
collision_layer = 5
collision_mask = 4

[node name="Sprite" type="AnimatedSprite" parent="Goomba"]
frames = ExtResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba"]
visible = false
position = Vector2( -6.5, 6 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Goomba"]
visible = false
position = Vector2( 6.5, 6 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Goomba"]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="Goomba"]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/AttackArea"]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="StompArea" type="Area2D" parent="Goomba"]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/StompArea"]
position = Vector2( 0, -2 )
shape = SubResource( 4 )

[node name="BounceArea" type="Area2D" parent="Goomba"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/BounceArea"]
position = Vector2( 0, 9 )
shape = SubResource( 8 )

[node name="PlayerDetector" type="Area2D" parent="Goomba"]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/PlayerDetector"]
shape = SubResource( 5 )

[node name="Stomp" type="AudioStreamPlayer" parent="Goomba"]
stream = ExtResource( 6 )
volume_db = -3.0

[node name="Hit" type="AudioStreamPlayer" parent="Goomba"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Disappear" type="AudioStreamPlayer" parent="Goomba"]
stream = ExtResource( 5 )
volume_db = -3.0

[node name="GroundedCheck" type="RayCast2D" parent="Goomba"]
visible = false
position = Vector2( -8, 10 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="GroundedCheck2" type="RayCast2D" parent="Goomba"]
visible = false
position = Vector2( 8, 10 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="WallCheck" type="RayCast2D" parent="Goomba"]
visible = false
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( -32, 0 )

[node name="WallVacantCheck" type="RayCast2D" parent="Goomba"]
visible = false
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( -64, 0 )

[node name="PitCheck" type="RayCast2D" parent="Goomba"]
visible = false
position = Vector2( -32, 10 )
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Poof" type="Particles2D" parent="Goomba"]
material = SubResource( 6 )
position = Vector2( 0, 12 )
emitting = false
amount = 1
lifetime = 0.35
one_shot = true
process_material = SubResource( 7 )
texture = ExtResource( 4 )
